# HomeFinancier

./: .dbmate.env  .dockerignore  .env.docker  .env.local  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  justfile  pyproject.toml
.github/workflows/: build.yaml  ci.yaml  deploy.yaml  quality_check.yaml
databases/postgresql/migrations/: schema.sql
databases/postgresql/migrations/versions/: 20240304141536_create_users_table.sql  20240310061501_create_storages_table.sql
deployment/: docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
deployment/dockerfiles/: homefinancier.Dockerfile
envs/: dev.env  test.env
migrations/: .env
src/: config.py  main.py
src/auth/: __init__.py  exceptions.py  facade.py  types.py
src/auth/ports/: authorization.py
src/auth_infrastructure/adapters/authorization/: __init__.py  jwt.py
src/exceptions/: __init__.py  core.py
src/expenses/: __init__.py  types.py
src/expenses/entities/: __init__.py  expense.py
src/expenses/repositories/: __init__.py  expenses.py
src/expenses/usecases/: __init__.py  create.py
src/foundation/: email.py  password.py
src/infrastructure/databases/: __init__.py
src/infrastructure/databases/base/: __init__.py  base.py  core.py  exceptions.py
src/infrastructure/databases/postgresql/: __init__.py  exceptions.py  postgresql.py
src/infrastructure/transport/grpc/: __init__.py  grpc.py
src/storages/: __init__.py  queries.py  types.py
src/storages/entities/: __init__.py  storage.py
src/storages/queries/: __init__.py  storage_get.py
src/storages/repositories/: __init__.py  storages.py
src/storages/usecases/: __init__.py  create.py  get.py
src/storages_infrastructure/: __init__.py
src/storages_infrastructure/queries/: __init__.py
src/storages_infrastructure/queries/storage_get/: __init__.py  postgresql.py
src/storages_infrastructure/repositories/: __init__.py
src/storages_infrastructure/repositories/storages/: __init__.py  postgresql.py
src/transactions/: __init__.py  exceptions.py  types.py
src/transactions/entities/: __init__.py  transaction.py
src/transactions/repositories/: __init__.py  transactions.py
src/transactions/usecases/: __init__.py  create.py
src/transactions_infrastructure/: __init__.py
src/transactions_infrastructure/transactions/: __init__.py  googlesheets.py
src/users/: __init__.py  queries.py  types.py
src/users/entities/: __init__.py  user.py
src/users/ports/: __init__.py  hashing.py
src/users/queries/: __init__.py  user_exists.py  user_get.py
src/users/repositories/: __init__.py  users.py
src/users/usecases/: __init__.py  create.py  exist.py  verify_password.py
src/users_infrastructure/: __init__.py
src/users_infrastructure/adapters/hashing/: __init__.py  fake_hashing.py
src/users_infrastructure/queries/: __init__.py
src/users_infrastructure/queries/user_exists/: __init__.py  postgresql.py
src/users_infrastructure/queries/user_get/: __init__.py  postgresql.py
src/users_infrastructure/repositories/: __init__.py
src/users_infrastructure/repositories/users/: __init__.py  postgresql.py
tests/: conftest.py  utils.py
tests/test_auth/test_facade/: conftest.py  test_get_user_id.py  test_login.py  test_refresh_credentials.py
tests/test_expenses/test_types/: test_amount.py  test_category.py  test_expenses_storage_link.py
tests/test_expenses/test_usecases/test_create/: conftest.py  test__create_domain.py  test_execute.py
tests/test_foundation/test_email/: test_email.py
tests/test_foundation/test_password/: test_password.py
tests/test_infrastructure/test_base/: conftest.py  test_connect.py  test_connection.py  test_open_curr_context_connection.py  test_session.py  test_session_context.py
tests/test_infrastructure/test_postgresql/: conftest.py  test_acquire.py  test_connect.py  test_disconnect.py  test_release.py
tests/test_infrastructure/test_transport/test_grpc/: conftest.py
tests/test_storages/test_types/: test_storage_link.py
tests/test_storages/test_usecases/test_create/: conftest.py  test__create_domain.py  test__is_correct_storage_link_format.py  test__validate.py  test__validate_expenses_table_link.py  test__validate_income_table_link.py  test__validate_storage_link.py  test_execute.py
tests/test_storages/test_usecases/test_get/: conftest.py  test_execute.py
tests/test_storages_infrastructure/test_queries/test_storage_get/: test_postgresql.py
tests/test_transactions/test_types/: test_amount.py  test_category.py  test_storage_link.py
tests/test_transactions/test_usecases/test_create/: conftest.py  test_execute.py
tests/test_transactions_infrastructure/test_transactions/test_googlesheets/: conftest.py  test_save.py
tests/test_users/test_types/: test_email.py  test_password.py
(+30 files in other folders)
