[tool.poetry]
name = "homefinancier"
version = "0.1.0"
description = ""
authors = ["Enes Gulakhmet <e.gulakhmet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.287"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "C901",  # too complex
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
