[tool.poetry]
name = "homefinancier"
version = "0.1.0"
description = ""
authors = ["Enes Gulakhmet <e.gulakhmet@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12"
asyncpg = "0.29.0"
gspread = "^6.0.2"
homefinancier-grpc = {git = "https://github.com/e-gulakhmet/HomeFinancierProtos.git", subdirectory = "generated/python"}

[tool.poetry.group.dev.dependencies]
ruff = "==0.0.287"
pre-commit = "==3.4.0"
pytest = "==8.0.2"
pytest-mock = "==3.11.1"
mypy = "==1.6.1"
pytest-asyncio = "==0.21.0"
asyncpg-stubs = "0.29.0"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = [
    "D", # Docstring
    "PGH003", # https://docs.astral.sh/ruff/rules/blanket-type-ignore/
    "FBT001", # https://docs.astral.sh/ruff/rules/boolean-type-hint-positional-argument/
    "ANN101", # https://docs.astral.sh/ruff/rules/missing-type-self/
    "A003", # https://docs.astral.sh/ruff/rules/builtin-attribute-shadowing/
    "TCH002", # https://docs.astral.sh/ruff/rules/typing-only-third-party-import/
    "FA102", # https://docs.astral.sh/ruff/rules/future-required-type-annotation/
    "RET504" # https://docs.astral.sh/ruff/rules/unnecessary-assign/
]
fix = true
exclude = [
    ".git",
    ".idea",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "venv",
    "migrations",
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "SLF001", # https://docs.astral.sh/ruff/rules/private-member-access/
    "S101", # https://docs.astral.sh/ruff/rules/assert/
    "S106", # https://docs.astral.sh/ruff/rules/hardcoded-password-func-arg/
    "PT004", # https://docs.astral.sh/ruff/rules/pytest-missing-fixture-name-underscore/
    "BLE001", # https://docs.astral.sh/ruff/rules/blind-except/
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
typeCheckingMode = "strict"
python-version = "3.11"
exclude = [
    ".git",
    ".idea",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "venv",
    "migrations",
]
